--- a/vocaparser.ini
+++ b/vocaparser.ini
@@ -1,6 +1,7 @@
 [uwsgi]
-chdir = /home/ubuntu/vocaparser
+chdir = /home/ubuntu/srv/vocaparser
 module = vocaparser.wsgi:application
+home = /home/ubuntu/myvenv/
 
 uid = deploy
 gid = deploy
